// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepStatus /> should render 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

<div>
  <p
    class="c0"
  >
    S’agit-il d’un licenciement pour faute grave ou lourde ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<StepStatus /> should render coefficient 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c5 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  display: block;
  margin-bottom: 0.25rem;
  font-size: 1rem;
  cursor: pointer;
}

.c7 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 0.625rem;
  margin-right: 1.25rem;
}

.c4 {
  margin: 1.25rem 0;
}

<div>
  <p
    class="c0"
  >
    S’agit-il d’un licenciement pour faute grave ou lourde ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-cdt.ancienneté"
    >
      Quelle est l'ancienneté du salarié ?
    </label>
    <label
      class="c6"
    >
      Choissisez parmi les catégories d'ancienneté telles que définies par le Code du travail
    </label>
    <select
      class="c7"
      id="input-cdt.ancienneté"
      name="cdt.ancienneté"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="12| plus de 2 ans"
      >
        plus de 2 ans
      </option>
      <option
        value="17| moins de 6 mois"
      >
        moins de 6 mois
      </option>
      <option
        value="20| 6 mois à moins de 2 ans"
      >
        6 mois à moins de 2 ans
      </option>
    </select>
  </div>
</div>
`;

exports[`<StepStatus /> should render seriousMisconduct 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

<div>
  <p
    class="c0"
  >
    S’agit-il d’un licenciement pour faute grave ou lourde ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;
